--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.41"
+postgres = "0.19.10"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.140"
