--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ chrono = "0.4.41"
 postgres = "0.19.10"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.140"
+openssl = "0.10"
+postgres-openssl = "0.5"
+actix-web = "4"
