--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.140"
 openssl = "0.10"
 postgres-openssl = "0.5"
-sqlx = {version = "0.8.6",features = ["runtime-tokio","postgres", "uuid", "chrono"]}
+sqlx = {version = "0.8.6",features = ["runtime-async-std-native-tls","postgres", "uuid", "chrono"]}
 actix-web = "4"
 actix-multipart = "0.7.2"
 log = "0.4"
